// Generated by generate_state_machine_cpp.py from state_machine.puml
// DO NOT EDIT MANUALLY.

#include "state_machine_generated.h"

namespace app {

void StateMachine::dispatch(Event event, Context& ctx) {
    switch (state_) {
    case State::Boot:
        if (event == Event::EV_BOOT_DONE && guard_init_ok(ctx)) {
            app_init_success();
            state_ = State::Start;
        } else if (event == Event::EV_ERROR && guard_ble_init_failed(ctx)) {
            app_on_error_ble();
            state_ = State::Error;
        } else if (event == Event::EV_ERROR && guard_hw_init_failed(ctx)) {
            app_on_error_hw();
            state_ = State::Halted;
        }
        break;
    case State::Disconnected:
        if (event == Event::EV_RETRY) {
            reset_and_return_start();
            state_ = State::Start;
        } else if (event == Event::EV_RESET) {
            reset_and_return_start();
            state_ = State::Start;
        } else if (event == Event::EV_ERROR) {
            app_on_error();
            state_ = State::Error;
        }
        break;
    case State::Error:
        if (event == Event::EV_RETRY) {
            reset_and_return_start();
            state_ = State::Start;
        } else if (event == Event::EV_RESET) {
            reset_and_return_start();
            state_ = State::Start;
        } else if (event == Event::EV_ERROR && guard_fatal(ctx)) {
            app_on_error_fatal();
            state_ = State::Halted;
        }
        break;
    case State::Evaluating:
        if (event == Event::EV_EVALUATE) {
            evaluate_and_show_result();
            state_ = State::Result;
        } else if (event == Event::EV_RESET) {
            reset_and_return_start();
            state_ = State::Start;
        } else if (event == Event::EV_ERROR) {
            app_on_error();
            state_ = State::Error;
        }
        break;
    case State::Gameplay:
        if (event == Event::EV_MOVE_ROCK && guard_mode_single(ctx)) {
            on_singleplayer_move_rock();
            state_ = State::Evaluating;
        } else if (event == Event::EV_MOVE_PAPER && guard_mode_single(ctx)) {
            on_singleplayer_move_paper();
            state_ = State::Evaluating;
        } else if (event == Event::EV_MOVE_SCISSORS && guard_mode_single(ctx)) {
            on_singleplayer_move_scissors();
            state_ = State::Evaluating;
        } else if (event == Event::EV_MOVE_ROCK && guard_mode_multi_and_peer_move_received(ctx)) {
            on_local_move_rock_complete();
            state_ = State::Evaluating;
        } else if (event == Event::EV_MOVE_PAPER && guard_mode_multi_and_peer_move_received(ctx)) {
            on_local_move_paper_complete();
            state_ = State::Evaluating;
        } else if (event == Event::EV_MOVE_SCISSORS && guard_mode_multi_and_peer_move_received(ctx)) {
            on_local_move_scissors_complete();
            state_ = State::Evaluating;
        } else if (event == Event::EV_MOVE_ROCK && guard_mode_multi_and_not_peer_move_received(ctx)) {
            on_local_move_rock_pending();
            state_ = State::Gameplay;
        } else if (event == Event::EV_MOVE_PAPER && guard_mode_multi_and_not_peer_move_received(ctx)) {
            on_local_move_paper_pending();
            state_ = State::Gameplay;
        } else if (event == Event::EV_MOVE_SCISSORS && guard_mode_multi_and_not_peer_move_received(ctx)) {
            on_local_move_scissors_pending();
            state_ = State::Gameplay;
        } else if (event == Event::EV_PEER_MOVE_RECEIVED && guard_local_move_chosen(ctx)) {
            on_peer_move_complete();
            state_ = State::Evaluating;
        } else if (event == Event::EV_PEER_MOVE_RECEIVED && guard_not_local_move_chosen(ctx)) {
            on_peer_move_pending();
            state_ = State::Gameplay;
        } else if (event == Event::EV_DISCONNECTED) {
            on_peer_disconnected();
            state_ = State::Disconnected;
        } else if (event == Event::EV_RESET) {
            reset_and_return_start();
            state_ = State::Start;
        } else if (event == Event::EV_ERROR) {
            app_on_error();
            state_ = State::Error;
        }
        break;
    case State::Halted:
        break;
    case State::HostTimeoutDialog:
        if (event == Event::EV_HOST_RETRY) {
            on_host_retry();
            state_ = State::HostWait;
        } else if (event == Event::EV_SOLO) {
            on_host_solo();
            state_ = State::Gameplay;
        } else if (event == Event::EV_CANCEL_HOST) {
            on_cancel_host();
            state_ = State::Start;
        } else if (event == Event::EV_RESET) {
            reset_and_return_start();
            state_ = State::Start;
        }
        break;
    case State::HostWait:
        if (event == Event::EV_HOST_TIMEOUT) {
            on_host_timeout();
            state_ = State::HostTimeoutDialog;
        } else if (event == Event::EV_HOST_FOUND && guard_peer_host_seen(ctx)) {
            on_conflict_become_join();
            state_ = State::Joining;
        } else if (event == Event::EV_CONNECTED) {
            on_peer_connected();
            state_ = State::Gameplay;
        } else if (event == Event::EV_CANCEL_HOST) {
            on_cancel_host();
            state_ = State::Start;
        } else if (event == Event::EV_RESET) {
            reset_and_return_start();
            state_ = State::Start;
        } else if (event == Event::EV_ERROR) {
            app_on_error();
            state_ = State::Error;
        }
        break;
    case State::Joining:
        if (event == Event::EV_CONNECTED) {
            on_peer_connected();
            state_ = State::Gameplay;
        } else if (event == Event::EV_CONNECT_FAILED && guard_retries_exhausted(ctx)) {
            on_join_failed();
            state_ = State::Start;
        } else if (event == Event::EV_HOST_GAME) {
            on_host_game();
            state_ = State::HostWait;
        } else if (event == Event::EV_RESET) {
            reset_and_return_start();
            state_ = State::Start;
        } else if (event == Event::EV_ERROR) {
            app_on_error();
            state_ = State::Error;
        }
        break;
    case State::Result:
        if (event == Event::EV_PLAY_AGAIN) {
            start_new_round();
            state_ = State::Gameplay;
        } else if (event == Event::EV_DISCONNECTED) {
            on_peer_disconnected();
            state_ = State::Disconnected;
        } else if (event == Event::EV_RESET) {
            reset_and_return_start();
            state_ = State::Start;
        } else if (event == Event::EV_ERROR) {
            app_on_error();
            state_ = State::Error;
        }
        break;
    case State::Start:
        if (event == Event::EV_HOST_FOUND && guard_local_mac_lower(ctx)) {
            on_host_game();
            state_ = State::HostWait;
        } else if (event == Event::EV_HOST_FOUND && guard_host_mac_valid(ctx)) {
            on_conflict_become_join();
            state_ = State::Joining;
        } else if (event == Event::EV_HOST_GAME) {
            on_host_game();
            state_ = State::HostWait;
        } else if (event == Event::EV_SOLO) {
            on_solo();
            state_ = State::Gameplay;
        } else if (event == Event::EV_ERROR) {
            app_on_error();
            state_ = State::Error;
        } else if (event == Event::EV_RESET) {
            reset_and_return_start();
            state_ = State::Start;
        }
        break;
    default:
        break;
    }
}

} // namespace app
